# wxer_lib

./: Cargo.toml
src/: comfort.rs  db.rs  fetch.rs  formulae.rs  lib.rs  units.rs  wxentry.rs
src/fetch/: asos.rs  asos_onemin.rs  climate_normals.rs  open_meteo.rs  rpi_station.rs  unh.rs
src/wxentry/: components.rs  entry_deser.rs  entry_struct.rs  hashmap.rs  wxall.rs
