[package]
name = "wxer_lib"
version = "0.5.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
