[package]
name = "wxer_lib"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9.0"
csv = "1.3.0"
derive_more = "0.99.17"
futures = "0.3.30"
reqwest = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
